[package]
name = "bucky-objects"
version = "0.1.0"
edition = "2021"
build = "build.rs"
description = "Bucky objects library"
license = "MIT"

[dependencies]
async-std = "1.12.0"
bucky-raw-codec = {version="0.1.0", features = ["derive"]}
bucky-error = "0.1.0"
bucky-crypto = "0.1.0"
bucky-time = "0.1.0"
serde = "1.0.202"
log = "0.4.21"
protobuf = { version = '2', features = ['with-bytes'] }
base58 = '0.2.0'
generic-array = { version = '0.12', default-features = false, features = ['serde'] }
itertools = "0.13.0"
once_cell = "1.19.0"
primitive-types = "0.12.2"
async-recursion = "1.1.1"
rand = "0.8.5"
async-trait = "0.1.80"
lru_time_cache = "0.11.11"
intbits = "0.2.0"
base-x = "0.2"
hex = "0.4.3"

[build-dependencies]
protoc-rust = '2'
chrono = '0.4'
protoc-bin-vendored = '3'
